# libvmod-rewrite

./: Makefile.am  README.rst  autogen.sh  configure.ac
redhat/: vmod-rewrite.spec
src/: Makefile.am  vmod_rewrite.c  vmod_rewrite.vcc
src/tests/: test01.vtc  test02.vtc  test03.vtc
